# memory.cpp

./: .gitattributes  .gitignore  .memoryignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  memory.tests.yaml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
assets/: memorycpp-terminal.txt
crates/memory-capi/: Cargo.toml
crates/memory-capi/src/: lib.rs
crates/memory-cli/: Cargo.toml
crates/memory-cli/src/: main.rs
crates/memory-core/: Cargo.toml
crates/memory-core/benches/: recall.rs
crates/memory-core/examples/: agent_context.rs  basic.rs
crates/memory-core/src/: api.rs  compression.rs  config.rs  engine.rs  error.rs  eval.rs  graph.rs  import.rs  lib.rs  map.rs  ranker.rs  storage.rs  types.rs  vector.rs
crates/memory-core/src/embedding/: hash.rs  mod.rs  providers.rs
crates/memory-core/tests/: engine.rs
docs/: C_API.md  INTEGRATIONS.md  adoption.md  advanced.md  ai-context.md  api-stability.md  api.md  architecture.md  attach.md  changelog.md  ci-memory.md  cli.md  community.md  compatibility.md  competitive-positioning.md  config.md  context-compiler.md  context-packs.md  core-concepts.md  demo-script.md  dev-workflow.md  doctor.md  dogfooding.md  embeddings.md  examples.md  faq.md  first-five-minutes.md  git-memory.md  handoff.md  inbox.md  inference-bottlenecks.md  install.md  launch-audit.md  launch-checklist.md  launch-plan.md  limitations.md  maps.md  mcp.md  memory-lifecycle.md  performance.md  (+20 more)
docs/adr/: 0001-sqlite-local-first.md  0002-mcp-read-only-default.md  0003-map-as-product-surface.md
docs/examples/: README.md  demo-architecture.mmd  demo-decisions.md  demo-evolution.mmd
docs/integrations/: claude.md  codex.md  continue.md  cursor.md  mcp.md  ollama.md  vscode.md
docs/recipes/: automatic-repo-memory.md  avoid-repeat-ai-mistakes.md  clean-up-memory.md  create-ai-context-pack.md  explain-a-codebase.md  fix-ci-failure.md  generate-project-map.md  offline-setup.md  onboard-a-new-developer.md  optimize-ai-context.md  prepare-a-pr.md  private-local-setup.md  recover-a-fix.md  remember-terminal-commands.md  restore-after-interruption.md  resume-work-after-weekend.md  review-a-pr.md  review-memory-candidates.md  rewind-a-project.md  share-project-memory.md  understand-a-new-repo.md  use-with-claude.md  use-with-codex.md  use-with-cursor.md  write-release-notes.md
evals/: example.jsonl
examples/: agent-log.txt  attach-cursor.md  attach-ollama.md  bench-sample.json  changelog.md  ci-failure.md  claude-context.md  codex-context.md  context-compiler.md  context-control-plane.md  cursor-context.md  dashboard-sample.html  dev-evening.md  dev-morning.md  dev-next.md  doctor.md  explain-repo.md  fix.md  generic-context.md  git-summary.md  git-watch.md  health.md  inbox-candidate.md  kv-report.md  mistake-firewall.md  new-dev-handoff.md  next.md  onboarding-brief.md  pr-checklist.md  pr-comment.md  pr-summary.md  privacy-status.md  project-map.html  project-map.md  project-map.mmd  readme-suggestion.md  repo-health.md  repo-timeline.md  review.md  reviewer-handoff.md  (+10 more)
examples/c/: basic.c
include/: memory_cpp.h
launch/: changelog-v0-public.md  demo-script.md  gif-shot-list.md  hacker-news.md  linkedin-post.md  product-hunt.md  reddit-programming.md  reddit-rust.md  twitter-thread.md
scripts/: check-docs.ps1  check-docs.sh  check-website.ps1  check-website.sh  demo-terminal.ps1  demo-terminal.sh  demo.ps1  demo.sh  fresh-clone-acceptance.ps1  fresh-clone-acceptance.sh  generate-examples.ps1  generate-examples.sh  install.ps1  install.sh  release-candidate.ps1  release-candidate.sh  release-local.ps1  release-local.sh  smoke.ps1  smoke.sh  verify.ps1
website/: app.js  index.html  styles.css
website/pages/: adoption.html  (+26 more)
(+8 files in other folders)
