[workspace]
members = [
    "crates/memory-core",
    "crates/memory-cli",
    "crates/memory-capi",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["memory.cpp contributors"]
repository = "https://github.com/KirtiRamchandani/memory.cpp"
homepage = "https://github.com/KirtiRamchandani/memory.cpp"
description = "Local-first repo memory for developers and AI coding tools."
keywords = ["ai", "memory", "sqlite", "cli", "local-first"]
categories = ["database", "command-line-utilities", "api-bindings"]

[workspace.dependencies]
anyhow = "1.0"
blake3 = "1.5"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
criterion = "0.5"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.10"
thiserror = "1.0"
tiny_http = "0.12"
ureq = { version = "3.3", features = ["json"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
