[package]
name = "memory-capi"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "C ABI for memory.cpp."

[lib]
name = "memory_cpp"
crate-type = ["cdylib", "staticlib"]

[dependencies]
memory-core = { path = "../memory-core", default-features = false }
serde_json.workspace = true
