[package]
name = "memory-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description.workspace = true
keywords.workspace = true
categories.workspace = true

[features]
default = ["http"]
http = ["dep:ureq"]

[dependencies]
blake3.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
ureq = { workspace = true, optional = true }
uuid.workspace = true

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true

[[bench]]
name = "recall"
harness = false
